// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSyntaxHighlight renders a css block 1`] = `
<div>
  <span
    class="sp-syntax-definition"
  >
    body
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-property"
  >
    background-color
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   
  <span
    class="sp-syntax-static"
  >
    lightblue
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  


  <span
    class="sp-syntax-definition"
  >
    h1
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-property"
  >
    color
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   
  <span
    class="sp-syntax-static"
  >
    white
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  
  
  <span
    class="sp-syntax-property"
  >
    text-align
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   
  <span
    class="sp-syntax-static"
  >
    center
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  


  <span
    class="sp-syntax-definition"
  >
    p
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-property"
  >
    font-family
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   
  <span
    class="sp-syntax-static"
  >
    verdana
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  
  
  <span
    class="sp-syntax-property"
  >
    font-size
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   
  <span
    class="sp-syntax-static"
  >
    20
  </span>
  <span
    class="sp-syntax-keyword"
  >
    px
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
</div>
`;

exports[`useSyntaxHighlight renders a html block 1`] = `
<div>
  
&lt;!DOCTYPE html&gt;

  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    html
  </span>
   
  <span
    class="sp-syntax-property"
  >
    lang
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "en"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
  
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    head
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    meta
  </span>
   
  <span
    class="sp-syntax-property"
  >
    charset
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "UTF-8"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    meta
  </span>
   
  <span
    class="sp-syntax-property"
  >
    name
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "viewport"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    content
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "width=device-width, initial-scale=1.0"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    meta
  </span>
   
  <span
    class="sp-syntax-property"
  >
    http-equiv
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "X-UA-Compatible"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    content
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "ie=edge"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    title
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  HTML 5 Boilerplate
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    title
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    link
  </span>
   
  <span
    class="sp-syntax-property"
  >
    rel
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "stylesheet"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    href
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "style.css"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
  
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    head
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
  
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    body
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
  
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    script
  </span>
   
  <span
    class="sp-syntax-property"
  >
    src
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "index.js"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    script
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
  
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    body
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    html
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  


</div>
`;

exports[`useSyntaxHighlight renders a js block 1`] = `
<div>
  <span
    class="sp-syntax-keyword"
  >
    function
  </span>
   
  <span
    class="sp-syntax-definition"
  >
    foo
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-plain"
  >
    params
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    return
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    params
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  


  <span
    class="sp-syntax-keyword"
  >
    const
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    baz
  </span>
   = 
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-plain"
  >
    foo
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    =&gt;
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    return
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    foo
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  


  <span
    class="sp-syntax-keyword"
  >
    const
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    array
  </span>
   = 
  <span
    class="sp-syntax-punctuation"
  >
    [
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ]
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-keyword"
  >
    const
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    object
  </span>
   = 
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-keyword"
  >
    const
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    regex
  </span>
   = 
  <span
    class="sp-syntax-keyword"
  >
    new
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    Regex
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-comment"
  >
    //);
  </span>
  


  <span
    class="sp-syntax-keyword"
  >
    const
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    expr
  </span>
   = 
  <span
    class="sp-syntax-string"
  >
    'Papayas'
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-keyword"
  >
    switch
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-plain"
  >
    expr
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    case
  </span>
   
  <span
    class="sp-syntax-string"
  >
    'Oranges'
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
  
    
  <span
    class="sp-syntax-plain"
  >
    console
  </span>
  .
  <span
    class="sp-syntax-property"
  >
    log
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-string"
  >
    'Oranges are $0.59 a pound.'
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  
    
  <span
    class="sp-syntax-keyword"
  >
    break
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    case
  </span>
   
  <span
    class="sp-syntax-string"
  >
    'Mangoes'
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    case
  </span>
   
  <span
    class="sp-syntax-string"
  >
    'Papayas'
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
  
    
  <span
    class="sp-syntax-plain"
  >
    console
  </span>
  .
  <span
    class="sp-syntax-property"
  >
    log
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-string"
  >
    'Mangoes and papayas are $2.79 a pound.'
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  
    
  <span
    class="sp-syntax-comment"
  >
    // expected output: "Mangoes and papayas are $2.79 a pound."
  </span>
  
    
  <span
    class="sp-syntax-keyword"
  >
    break
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    default
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
  
    
  <span
    class="sp-syntax-plain"
  >
    console
  </span>
  .
  <span
    class="sp-syntax-property"
  >
    log
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-string"
  >
    \`Sorry, we are out of 
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    \${
  </span>
  <span
    class="sp-syntax-plain"
  >
    expr
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  <span
    class="sp-syntax-string"
  >
    .\`
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
</div>
`;

exports[`useSyntaxHighlight renders a jsx block 1`] = `
<div>
  <span
    class="sp-syntax-keyword"
  >
    function
  </span>
   
  <span
    class="sp-syntax-definition"
  >
    Greeting
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
   
  <span
    class="sp-syntax-property"
  >
    name
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    return
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-tag"
  >
    h1
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  Hello, 
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  <span
    class="sp-syntax-plain"
  >
    name
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  !
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-tag"
  >
    h1
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  


  <span
    class="sp-syntax-keyword"
  >
    export
  </span>
   
  <span
    class="sp-syntax-keyword"
  >
    default
  </span>
   
  <span
    class="sp-syntax-keyword"
  >
    function
  </span>
   
  <span
    class="sp-syntax-definition"
  >
    App
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    return
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-tag"
  >
    div
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
      
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    Greeting
  </span>
   
  <span
    class="sp-syntax-property"
  >
    name
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "Divyesh"
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    /&gt;
  </span>
  
      
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    Greeting
  </span>
   
  <span
    class="sp-syntax-property"
  >
    name
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "Sarah"
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    /&gt;
  </span>
  
      
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    Greeting
  </span>
   
  <span
    class="sp-syntax-property"
  >
    name
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "Taylor"
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    /&gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-tag"
  >
    div
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
  
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
</div>
`;

exports[`useSyntaxHighlight renders a less block 1`] = `
<div>
  <span
    class="sp-syntax-keyword"
  >
    @width
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   10
  <span
    class="sp-syntax-keyword"
  >
    px
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-keyword"
  >
    @height
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   
  <span
    class="sp-syntax-keyword"
  >
    @width
  </span>
   + 10
  <span
    class="sp-syntax-definition"
  >
    px
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

#header 
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-property"
  >
    width
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   @
  <span
    class="sp-syntax-static"
  >
    width
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  
  
  <span
    class="sp-syntax-property"
  >
    height
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   @
  <span
    class="sp-syntax-static"
  >
    height
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
</div>
`;

exports[`useSyntaxHighlight renders a python block 1`] = `
<div>
  <span
    class="sp-syntax-keyword"
  >
    import
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    os
  </span>
  


  <span
    class="sp-syntax-plain"
  >
    api_token
  </span>
   = 
  <span
    class="sp-syntax-plain"
  >
    os
  </span>
  .
  <span
    class="sp-syntax-property"
  >
    environ
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    [
  </span>
  <span
    class="sp-syntax-string"
  >
    'API_TOKEN'
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ]
  </span>
  


  <span
    class="sp-syntax-comment"
  >
    # Prints the api_token variable
  </span>
  

  <span
    class="sp-syntax-definition"
  >
    print
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    (
  </span>
  <span
    class="sp-syntax-string"
  >
    "API token:"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ,
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    api_token
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    )
  </span>
</div>
`;

exports[`useSyntaxHighlight renders a shell block 1`] = `
<div>
  #!/bin/sh


  <span
    class="sp-syntax-plain"
  >
    EXAMPLE
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "drawn joyed"
  </span>
  


  <span
    class="sp-syntax-comment"
  >
    # Prints the EXAMPLE variable
  </span>
  

  <span
    class="sp-syntax-keyword"
  >
    function
  </span>
   show-example() {
  
  <span
    class="sp-syntax-plain"
  >
    echo
  </span>
   
  <span
    class="sp-syntax-plain"
  >
    $EXAMPLE
  </span>
  


</div>
`;

exports[`useSyntaxHighlight renders a vue block 1`] = `
<div>
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    template
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    div
  </span>
   
  <span
    class="sp-syntax-property"
  >
    class
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "column is-12"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    label
  </span>
   
  <span
    class="sp-syntax-property"
  >
    class
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "label"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    for
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "email"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  Email
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    label
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    p
  </span>
   
  <span
    class="sp-syntax-property"
  >
    :class
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "{ 'control': true }"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
        
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    input
  </span>
   
  <span
    class="sp-syntax-property"
  >
    v-validate
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "'required|email'"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    :class
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "{'input': true, 'is-danger': errors.has('email') }"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    name
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "email"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    type
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "text"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    placeholder
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "Email"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
        
  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    span
  </span>
   
  <span
    class="sp-syntax-property"
  >
    v-show
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "errors.has('email')"
  </span>
   
  <span
    class="sp-syntax-property"
  >
    class
  </span>
  =
  <span
    class="sp-syntax-string"
  >
    "help is-danger"
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  {{ errors.first('email') }}
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    span
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
    
  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    p
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    div
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    template
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  


  <span
    class="sp-syntax-punctuation"
  >
    &lt;
  </span>
  <span
    class="sp-syntax-definition"
  >
    script
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
  
  
  <span
    class="sp-syntax-keyword"
  >
    export
  </span>
   
  <span
    class="sp-syntax-keyword"
  >
    default
  </span>
   
  <span
    class="sp-syntax-punctuation"
  >
    {
  </span>
  
  
  <span
    class="sp-syntax-property"
  >
    name
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    :
  </span>
   
  <span
    class="sp-syntax-string"
  >
    'basic-example'
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    }
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    ;
  </span>
  

  <span
    class="sp-syntax-punctuation"
  >
    &lt;/
  </span>
  <span
    class="sp-syntax-definition"
  >
    script
  </span>
  <span
    class="sp-syntax-punctuation"
  >
    &gt;
  </span>
</div>
`;
